    - Added `table.binary_search` function.
    - Added `technology` module with various runtime technology-related utilities.
    - Added technology slot styles.
    - Added require guards to allow requiring flib modules with any syntax without breaking upvalues.
  Bugfixes:
    - Fixed `data_util.get_energy_value` not accepting capital `K` as a unit suffix. (#59)
---------------------------------------------------------------------------------------------------
Version: 0.13.0
Date: 2023-10-14
  Features:
    - [position] Added `position.ge`, `position.gt`, and `position.lerp` functions.
  Bugfixes:
    - [bounding-box] Fixed `bounding_box.recenter_on()` not properly preserving box dimensions.
---------------------------------------------------------------------------------------------------
Version: 0.12.9
Date: 2023-06-01
  Bugfixes:
    - Fixed Chinese translation making the mod unloadable (#53)
---------------------------------------------------------------------------------------------------
Version: 0.12.8
Date: 2023-05-29
  Bugfixes:
    - [dictionary-lite] Fixed that the total strings count did not include "initial_contents" strings
---------------------------------------------------------------------------------------------------
Version: 0.12.7
Date: 2023-04-30
  Features:
    - Added `flib_nav_(backward|forward)_(black|white|disabled)` sprites
    - Added `flib_titlebar_separator_line` and `flib_titlebar_search_textfield` styles
  Changes:
    - Updated base dependency to 1.1.80
---------------------------------------------------------------------------------------------------
Version: 0.12.6
Date: 2023-03-20
  Bugfixes:
    - [gui-lite] Fixed that drag_target was not restored to GUI elem definitions after being used in gui.add
---------------------------------------------------------------------------------------------------
Version: 0.12.5
Date: 2023-03-09
  Features: